Refactor build files and update dependencies